# qtile-cmd-client

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  GEMINI.md  Makefile  README.md  deps  docs  justfile  mesa
.claude/: settings.json
.github/scripts/: install-deps  install-qtile  patch_wayland_setup.py  run-coverage  run-tests  run-wl-tests  run-x11-tests
.github/workflows/: maintenance.yml  release.yml  rust.yml
docs/: all.html  index.html
docs/utils/: index.html  sidebar-items.js
docs/utils/args/: enum.Commands.html  index.html  sidebar-items.js  struct.Args.html
docs/utils/client/: index.html  sidebar-items.js  struct.InteractiveCommandClient.html  struct.ShellClient.html
docs/utils/graph/: enum.ObjectType.html  enum.Selector.html  index.html  sidebar-items.js  struct.CommandGraphNode.html
docs/utils/ipc/: index.html  struct.Client.html
docs/utils/parser/: index.html  sidebar-items.js  struct.CommandParser.html
scripts/: install-deps  install-qtile  patch_wayland_setup.py  run-wl-tests  run-x11-tests
src/: lib.rs  main.rs
src/tests/: framing.rs  mod.rs
src/utils/: args.rs  client.rs  graph.rs  ipc.rs  mod.rs  parser.rs  repl.rs
