[package]
name = "qtile-cmd-client"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_tuple = { version = "*" }
serde_json = { version = "*" }
log = { version = "0.4.27" }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = { version = "0.27.1" }
itertools = "0.14.0"
simple_logger = "5.0.0"
ctor = "*"
sysinfo = "*"
shellexpand = { version = "3.1.1", features = ["full", "path"] }

[[bin]]
name = "qticc"
path = "src/main.rs"

[lib]
name = "qtile_client_lib"
path = "src/lib.rs"
