[package]
name = "qtile-cmd-client"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_tuple = { version = "*" }
serde_json = { version = "*" }
log = { version = "0.4.29" }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = { version = "0.28.0" }
itertools = "0.14.0"
simple_logger = "5.2.0"
ctor = "*"
sysinfo = "*"
shellexpand = { version = "3.1.2", features = ["full", "path"] }
rustyline = "18.0.0"

[[bin]]
name = "qticc"
path = "src/main.rs"

[lib]
name = "qtile_client_lib"
path = "src/lib.rs"
